--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "postinstall": "nuxt prepare"
   },
   "dependencies": {
-    "bootstrap": "^5.2.3"
+    "bootstrap": "^5.2.3",
+    "vue-toast-notification": "3.0"
   },
   "devDependencies": {
     "@nuxtjs/apollo": "^5.0.0-alpha.5",
