--- a/package.json
+++ b/package.json
@@ -8,11 +8,21 @@
     "postinstall": "nuxt prepare"
   },
   "dependencies": {
+    "@popperjs/core": "^2.11.8",
+    "@types/vuelidate": "^0.7.15",
+    "@vuelidate/core": "^2.0.0",
+    "@vuelidate/validators": "^2.0.0",
     "bootstrap": "^5.2.3",
+    "font-awesome": "^4.7.0",
+    "pe7-icon": "^1.0.4",
+    "vue-flag-icon": "^2.1.0",
+    "vue-multiselect": "^3.0.0-beta.2",
     "vue-toast-notification": "3.0"
   },
   "devDependencies": {
     "@nuxtjs/apollo": "^5.0.0-alpha.5",
-    "nuxt": "^3.2.3"
+    "@types/bootstrap": "^5.2.6",
+    "nuxt": "^3.2.3",
+    "nuxt-lodash": "^2.5.0"
   }
 }
