--- a/package.json
+++ b/package.json
@@ -6,10 +6,10 @@
     "generate": "nuxt generate",
     "preview": "nuxt preview",
     "postinstall": "nuxt prepare",
-    "lint": "eslint --ext \".ts,.vue,.js\" --ignore-path .gitignore ."
+    "lint": "eslint --ext \".ts,.vue,.js\" --ignore-path .gitignore .",
+    "lintfix": "eslint pages components layouts --fix --ext .vue"
   },
   "dependencies": {
-    "@nuxt/eslint-config": "^0.2.0",
     "@popperjs/core": "^2.11.8",
     "@types/vuelidate": "^0.7.15",
     "@vuelidate/core": "^2.0.0",
@@ -31,9 +31,9 @@
     "@typescript-eslint/eslint-plugin": "^6.7.2",
     "@typescript-eslint/parser": "^6.7.2",
     "eslint": "^8.49.0",
-    "eslint-plugin-auto-import": "^0.1.1",
     "eslint-plugin-nuxt": "^4.0.0",
     "eslint-plugin-vue": "^9.17.0",
+    "@nuxt/eslint-config": "^0.2.0",
     "nuxt": "^3.2.3",
     "nuxt-lodash": "^2.5.0"
   }
