--- a/package.json
+++ b/package.json
@@ -18,12 +18,15 @@
     "font-awesome": "^4.7.0",
     "pe7-icon": "^1.0.4",
     "qs": "^6.11.2",
+    "vue-easy-lightbox": "^1.16.0",
     "vue-flag-icon": "^2.1.0",
     "vue-multiselect": "^3.0.0-beta.2",
     "vue-toast-notification": "3.0",
-    "vue3-popper": "^1.5.0"
+    "vue3-popper": "^1.5.0",
+    "vue3-treeview": "^0.4.1"
   },
   "devDependencies": {
+    "@nuxt/eslint-config": "^0.2.0",
     "@nuxtjs/apollo": "^5.0.0-alpha.5",
     "@types/bootstrap": "^5.2.6",
     "@types/qs": "^6.9.8",
@@ -32,7 +35,6 @@
     "eslint": "^8.49.0",
     "eslint-plugin-nuxt": "^4.0.0",
     "eslint-plugin-vue": "^9.17.0",
-    "@nuxt/eslint-config": "^0.2.0",
     "nuxt": "^3.2.3",
     "nuxt-lodash": "^2.5.0"
   }
