--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@popperjs/core": "^2.11.8",
+    "@tinymce/tinymce-vue": "^5.1.1",
     "@types/vuelidate": "^0.7.15",
     "@vuelidate/core": "^2.0.0",
     "@vuelidate/validators": "^2.0.0",
