--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -33,6 +33,11 @@
                 "functions": "never"
             }
         ],
+        "curly": ["error", "all"],
+        "quotes": ["error", "single"],
+        "keyword-spacing": ["error", { "before": true, "after": true }],
+        "space-infix-ops": ["error", { "int32Hint": false }],
+        "space-before-blocks": ["error", { "functions": "always", "keywords": "always", "classes": "always" }],
         "@typescript-eslint/no-explicit-any": "off",
         "vue/no-multiple-template-root": "off",
         "vue/multi-word-component-names": "off",
