--- a/package.json
+++ b/package.json
@@ -1,5 +1,9 @@
 {
   "private": true,
+  "engines": {
+    "npm": ">=10.0.0",
+    "node": ">=20.0.0"
+  },
   "scripts": {
     "build": "nuxt build",
     "dev": "nuxt dev",
@@ -11,9 +15,9 @@
   },
   "dependencies": {
     "@popperjs/core": "^2.11.8",
-    "@tinymce/tinymce-vue": "^5.1.1",
+    "@tinymce/tinymce-vue": "^6.1.0",
     "@types/vuelidate": "^0.7.15",
-    "@vuelidate/core": "^2.0.0",
+    "@vuelidate/core": "^2.0.3",
     "@vuelidate/validators": "^2.0.0",
     "bootstrap": "^5.2.3",
     "font-awesome": "^4.7.0",
@@ -36,7 +40,8 @@
     "eslint": "^8.49.0",
     "eslint-plugin-nuxt": "^4.0.0",
     "eslint-plugin-vue": "^9.17.0",
-    "nuxt": "^3.2.3",
-    "nuxt-lodash": "^2.5.0"
+    "nuxt": "^3.5.3",
+    "nuxt-lodash": "^2.5.0",
+    "vue-i18n": "^11.0.1"
   }
 }
