--- a/package.json
+++ b/package.json
@@ -15,10 +15,10 @@
   },
   "dependencies": {
     "@popperjs/core": "^2.11.8",
-    "@tinymce/tinymce-vue": "^6.1.0",
     "@types/vuelidate": "^0.7.15",
     "@vuelidate/core": "^2.0.3",
     "@vuelidate/validators": "^2.0.0",
+    "@vueuse/core": "^12.2.0",
     "bootstrap": "^5.2.3",
     "font-awesome": "^4.7.0",
     "pe7-icon": "^1.0.4",
