--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@vuelidate/validators": "^2.0.0",
     "@vueuse/core": "^12.2.0",
     "bootstrap": "^5.2.3",
+    "crypto-js": "^4.2.0",
     "font-awesome": "^4.7.0",
     "pe7-icon": "^1.0.4",
     "qrcode.vue": "^3.6.0",
@@ -35,6 +36,7 @@
     "@nuxt/eslint-config": "^0.2.0",
     "@nuxtjs/apollo": "^5.0.0-alpha.5",
     "@types/bootstrap": "^5.2.6",
+    "@types/crypto-js": "^4.2.2",
     "@types/qs": "^6.9.8",
     "@typescript-eslint/eslint-plugin": "^6.7.2",
     "@typescript-eslint/parser": "^6.7.2",
