--- a/package.json
+++ b/package.json
@@ -15,16 +15,19 @@
   },
   "dependencies": {
     "@popperjs/core": "^2.11.8",
+    "@types/sortablejs": "^1.15.8",
     "@types/vuelidate": "^0.7.15",
     "@vuelidate/core": "^2.0.3",
     "@vuelidate/validators": "^2.0.0",
     "@vueuse/core": "^12.2.0",
+    "@vueuse/integrations": "^12.5.0",
     "bootstrap": "^5.2.3",
     "crypto-js": "^4.2.0",
     "font-awesome": "^4.7.0",
     "pe7-icon": "^1.0.4",
     "qrcode.vue": "^3.6.0",
     "qs": "^6.11.2",
+    "sortablejs": "^1.15.6",
     "vue-easy-lightbox": "^1.16.0",
     "vue-flag-icon": "^2.1.0",
     "vue-multiselect": "^3.0.0-beta.2",
