--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "lintfix": "eslint pages components layouts --fix --ext .vue"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-free": "^6.7.2",
     "@popperjs/core": "^2.11.8",
     "@types/sortablejs": "^1.15.8",
     "@types/vuelidate": "^0.7.15",
@@ -30,6 +31,7 @@
     "sortablejs": "^1.15.6",
     "vue-easy-lightbox": "^1.16.0",
     "vue-flag-icon": "^2.1.0",
+    "vue-loading-overlay": "6.0",
     "vue-multiselect": "^3.0.0-beta.2",
     "vue-toast-notification": "3.0",
     "vue3-popper": "^1.5.0",
