--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "lintfix": "eslint pages components layouts --fix --ext .vue"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-free": "^6.7.2",
     "@popperjs/core": "^2.11.8",
     "@types/sortablejs": "^1.15.8",
     "@types/vuelidate": "^0.7.15",
@@ -21,6 +22,7 @@
     "@vuelidate/validators": "^2.0.0",
     "@vueuse/core": "^12.2.0",
     "@vueuse/integrations": "^12.5.0",
+    "axios": "^1.7.9",
     "bootstrap": "^5.2.3",
     "crypto-js": "^4.2.0",
     "font-awesome": "^4.7.0",
@@ -30,6 +32,7 @@
     "sortablejs": "^1.15.6",
     "vue-easy-lightbox": "^1.16.0",
     "vue-flag-icon": "^2.1.0",
+    "vue-loading-overlay": "6.0",
     "vue-multiselect": "^3.0.0-beta.2",
     "vue-toast-notification": "3.0",
     "vue3-popper": "^1.5.0",
