--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "bootstrap": "^5.2.3",
     "crypto-js": "^4.2.0",
     "font-awesome": "^4.7.0",
+    "lucide-vue-next": "^0.475.0",
     "pe7-icon": "^1.0.4",
     "qrcode.vue": "^3.6.0",
     "qs": "^6.11.2",
