--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "vue-flag-icon": "^2.1.0",
     "vue-loading-overlay": "6.0",
     "vue-multiselect": "^3.0.0-beta.2",
+    "vue-tel-input": "^9.3.0",
     "vue-toast-notification": "3.0",
     "vue3-popper": "^1.5.0",
     "vue3-treeview": "^0.4.1"
