--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "qrcode.vue": "^3.6.0",
     "qs": "^6.11.2",
     "sortablejs": "^1.15.6",
+    "vue-currency-input": "^3.2.1",
     "vue-easy-lightbox": "^1.16.0",
     "vue-flag-icon": "^2.1.0",
     "vue-loading-overlay": "6.0",
