--- a/package.json
+++ b/package.json
@@ -26,14 +26,17 @@
     "bootstrap": "^5.2.3",
     "crypto-js": "^4.2.0",
     "font-awesome": "^4.7.0",
+    "lucide-vue-next": "^0.475.0",
     "pe7-icon": "^1.0.4",
     "qrcode.vue": "^3.6.0",
     "qs": "^6.11.2",
     "sortablejs": "^1.15.6",
+    "vue-currency-input": "^3.2.1",
     "vue-easy-lightbox": "^1.16.0",
     "vue-flag-icon": "^2.1.0",
     "vue-loading-overlay": "6.0",
     "vue-multiselect": "^3.0.0-beta.2",
+    "vue-tel-input": "^9.3.0",
     "vue-toast-notification": "3.0",
     "vue3-popper": "^1.5.0",
     "vue3-treeview": "^0.4.1"
