--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "vue-currency-input": "^3.2.1",
     "vue-easy-lightbox": "^1.16.0",
     "vue-flag-icon": "^2.1.0",
+    "vue-imask": "^7.6.1",
     "vue-loading-overlay": "6.0",
     "vue-multiselect": "^3.0.0-beta.2",
     "vue-tel-input": "^9.3.0",
