--- a/package.json
+++ b/package.json
@@ -34,12 +34,14 @@
     "vue-currency-input": "^3.2.1",
     "vue-easy-lightbox": "^1.16.0",
     "vue-flag-icon": "^2.1.0",
+    "vue-imask": "^7.6.1",
     "vue-loading-overlay": "6.0",
     "vue-multiselect": "^3.0.0-beta.2",
     "vue-tel-input": "^9.3.0",
     "vue-toast-notification": "3.0",
     "vue3-popper": "^1.5.0",
-    "vue3-treeview": "^0.4.1"
+    "vue3-treeview": "^0.4.1",
+    "vuefinder": "^2.7.1"
   },
   "devDependencies": {
     "@nuxt/eslint-config": "^0.2.0",
@@ -47,6 +49,7 @@
     "@types/bootstrap": "^5.2.6",
     "@types/crypto-js": "^4.2.2",
     "@types/qs": "^6.9.8",
+    "@types/vue-tel-input": "^2.1.7",
     "@typescript-eslint/eslint-plugin": "^6.21.0",
     "@typescript-eslint/parser": "^6.21.0",
     "eslint": "^8.49.0",
@@ -54,6 +57,7 @@
     "eslint-plugin-vue": "^9.17.0",
     "nuxt": "^3.5.3",
     "nuxt-lodash": "^2.5.0",
+    "nuxt-lucide-icons": "^1.0.5",
     "vue-i18n": "^11.0.1"
   }
 }
