--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@vueuse/integrations": "^12.5.0",
     "axios": "^1.7.9",
     "bootstrap": "^5.2.3",
+    "chart.js": "^4.4.8",
     "crypto-js": "^4.2.0",
     "font-awesome": "^4.7.0",
     "lucide-vue-next": "^0.475.0",
@@ -31,6 +32,7 @@
     "qrcode.vue": "^3.6.0",
     "qs": "^6.11.2",
     "sortablejs": "^1.15.6",
+    "vue-chartjs": "^5.3.2",
     "vue-currency-input": "^3.2.1",
     "vue-easy-lightbox": "^1.16.0",
     "vue-flag-icon": "^2.1.0",
