--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   },
   "dependencies": {
     "@fortawesome/fontawesome-free": "^6.7.2",
+    "@googlemaps/js-api-loader": "^1.16.8",
     "@he-tree/vue": "^2.9.4",
     "@popperjs/core": "^2.11.8",
     "@types/sortablejs": "^1.15.8",
