--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "bootstrap": "^5.2.3",
     "chart.js": "^4.4.8",
     "crypto-js": "^4.2.0",
+    "floating-vue": "^5.2.2",
     "lucide-vue-next": "^0.475.0",
     "qrcode.vue": "^3.6.0",
     "qs": "^6.11.2",
@@ -38,6 +39,7 @@
     "vue-flag-icon": "^2.1.0",
     "vue-imask": "^7.6.1",
     "vue-loading-overlay": "6.0",
+    "vue-mention": "^2.0.0-alpha.3",
     "vue-multiselect": "^3.0.0-beta.2",
     "vue-tel-input": "^9.3.0",
     "vue-toast-notification": "3.0",
