--- a/package.json
+++ b/package.json
@@ -28,7 +28,7 @@
     "bootstrap": "^5.2.3",
     "chart.js": "^4.4.8",
     "crypto-js": "^4.2.0",
-    "floating-vue": "^5.2.2",
+    "floating-vue": "^2.0.0-beta.1",
     "lucide-vue-next": "^0.475.0",
     "qrcode.vue": "^3.6.0",
     "qs": "^6.11.2",
